<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/home_banner_card"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/home_banner_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/currentOrderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_order"
        style="@style/SectionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_banner_card" />

    <androidx.cardview.widget.CardView
        android:id="@+id/home_cardViewCurrentOrder"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderText">
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/home_noOrderLayout"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No Order Pending"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic|bold"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:text="TAP TO ORDER NOW"/>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/home_current_order_productImage"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/water_tank" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/home_current_order_productImage"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/home_current_order_productTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pure Water 20 Litre"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/home_current_order_productQuanPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1x | 40 BDT" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/home_current_order_deliveryStatusImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_car_rental_24" />

                    <TextView
                        android:id="@+id/home_current_order_deliveryStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="On the way"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/home_recentOrderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_order"
        style="@style/SectionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_cardViewCurrentOrder" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recentOrderListRV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_recentOrderText" />

    <TextView
        android:id="@+id/home_viewAllOrderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all_orders"
        app:layout_constraintBottom_toBottomOf="@+id/home_viewAllOrderArrow"
        app:layout_constraintEnd_toStartOf="@+id/home_viewAllOrderArrow"
        app:layout_constraintTop_toTopOf="@id/home_viewAllOrderArrow" />

    <ImageView
        android:id="@+id/home_viewAllOrderArrow"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/right_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_recentOrderListRV" />


</androidx.constraintlayout.widget.ConstraintLayout>