<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkwhite"
    tools:context=".Views.Fragment.ProfileFragment">


    <ImageView
        android:id="@+id/profile_edit_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/baseline_mode_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/profile_saved_location_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_saved_location_text"
        app:srcCompat="@drawable/baseline_mode_edit_24" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_cardView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_dp_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="50dp"
                android:src="@drawable/user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profile_customer_status_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_star_rate_24"
                app:layout_constraintEnd_toEndOf="@+id/profile_dp_image"
                app:layout_constraintStart_toStartOf="@+id/profile_dp_image"
                app:layout_constraintTop_toBottomOf="@id/profile_dp_image" />

            <TextView
                android:id="@+id/profile_customer_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="STAR CUSTOMER"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/profile_customer_status_image"
                app:layout_constraintStart_toStartOf="@+id/profile_customer_status_image"
                app:layout_constraintTop_toBottomOf="@id/profile_customer_status_image"/>

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Md Ahsan Kabir"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_active_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/active_plan"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_name" />

            <TextView
                android:id="@+id/profile_active_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_active_plan"
                android:textColor="@color/orange"
                app:layout_constraintBottom_toBottomOf="@+id/profile_active_p"
                app:layout_constraintStart_toEndOf="@id/profile_active_p"
                app:layout_constraintTop_toTopOf="@id/profile_active_p" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profile_saved_location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/your_saved_location"
        style="@style/SectionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_cardView" />

    <TextView
        android:id="@+id/profile_delivery_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nishat Mansion, DKP Road, Barguna"
        app:layout_constraintStart_toStartOf="@+id/profile_saved_location_text"
        app:layout_constraintTop_toBottomOf="@+id/profile_saved_location_text" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/profile_delivery_map"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_delivery_address" />

    <TextView
        android:id="@+id/profile_stats_text"
        style="@style/SectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Statistics"
        app:layout_constraintEnd_toEndOf="@+id/profile_delivery_map"
        app:layout_constraintStart_toStartOf="@+id/profile_delivery_map"
        app:layout_constraintTop_toBottomOf="@+id/profile_delivery_map" />

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_stats_text" />

    <TextView
        android:id="@+id/profile_total_orderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Orders"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profile_total_spentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Spent"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view" />

    <TextView
        android:id="@+id/profile_total_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_total_orderText"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/profile_total_spent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="120"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_total_spentText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>